components/apps/enterprise-app/base/enterprise-app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-apache-php-app
  labels:
    app: my-apache-php-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-apache-php-app
  template:
    metadata:
      labels:
        app: my-apache-php-app
        deploymentconfig: my-apache-php-app
    spec:
      containers:
        - name: my-apache-php-app
          image: >-
            quay.io/hguerreroo/my-apache-php-app@sha256:11b298623d8edbfe100ea848f14f013ed22cf3902834d029b31edfcd6e31ce60
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 0.5m
              memory: 1Gb
            limits:
              cpu: 1000m
              memory: 3Gb  
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
