components/apps/enterprise-app/base/enterprise-app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: www-php-app
  labels:
    app: my-apache-php-app
spec:
  to:
    kind: Service
    name: my-apache-php-app
    weight: 100
  port:
    targetPort: 80-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
